Signed-off-by: Manish Kumar Ghai <manish.k.ghai@crmnext.in>

--- a/Max Life Insurance/.classpath
+++ b/Max Life Insurance/.classpath
@@ -3,8 +3,7 @@
 	<classpathentry kind="src" path="framework.developement"/>
 	<classpathentry kind="src" path="framwork.testing"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="//192.168.0.201/anands/Liabries/selenium-server-standalone-2.48.2.jar"/>
-	<classpathentry kind="lib" path="//192.168.0.201/anands/Liabries/reportng-1.1.4/reportng-1.1.4.jar"/>
-	<classpathentry kind="lib" path="//192.168.0.201/anands/Liabries/reportng-1.1.4/velocity-dep-1.4.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/New folder/selenium-server-standalone-3.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
